metadata/force-app/main/default/objects/CustomName_iyhWs__c/CustomName_iyhWs__c.object-meta.xml
<CustomObject>
    <description>Description_vCXrZ</description>
    <label>CustomLabel_yIpqg</label>
    <nameField>
        <label>CustomLabel_yIpqg</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_yIpqgs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>