metadata/force-app/main/default/objects/CustomName_iyhWs__c/fields/CustomField_bOyLf__c.field-meta.xml
<CustomField>
    <fullName>CustomField_bOyLf__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldBgNBg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>